edit required files

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -136,32 +136,32 @@
                             <div class="col-lg-12 text-right">
                                 <span class="label header">سوابق اجرایی</span>
                                 <div class="executive text-center w-100">
-{#                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>#}
-                                    <table class="table mtop-lg-25">
-                                        <thead>
-                                            <tr>
-                                                <td>سمت</td>
-                                                <td>محل خدمت</td>
-                                                <td>شهر</td>
-                                                <td>از تاریخ</td>
-                                                <td>تا تاریخ</td>
-                                                <td></td>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>برنامه نویس</td>
-                                                <td>چمران تیم</td>
-                                                <td>تهران</td>
-                                                <td>1/1/1398</td>
-                                                <td>1/6/1398</td>
-                                                <td>
-                                                    <i class="fas fa-pen"></i>
-                                                    <i class="fas fa-trash-alt"></i>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>
+{#                                    <table class="table mtop-lg-25">#}
+{#                                        <thead>#}
+{#                                            <tr>#}
+{#                                                <td>سمت</td>#}
+{#                                                <td>محل خدمت</td>#}
+{#                                                <td>شهر</td>#}
+{#                                                <td>از تاریخ</td>#}
+{#                                                <td>تا تاریخ</td>#}
+{#                                                <td></td>#}
+{#                                            </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody>#}
+{#                                            <tr>#}
+{#                                                <td>برنامه نویس</td>#}
+{#                                                <td>چمران تیم</td>#}
+{#                                                <td>تهران</td>#}
+{#                                                <td>1/1/1398</td>#}
+{#                                                <td>1/6/1398</td>#}
+{#                                                <td>#}
+{#                                                    <i class="fas fa-pen"></i>#}
+{#                                                    <i class="fas fa-trash-alt"></i>#}
+{#                                                </td>#}
+{#                                            </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
                                 </div>
                                 <span class="executive-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
@@ -172,30 +172,30 @@
                             <div class="col-lg-12 text-right">
                                 <span class="label header">سوابق پژوهشی <span class="sub-header">(بهترین ها طی پنج سال گذشته)</span></span>
                                 <div class="studious text-center w-100">
-{#                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>#}
-                                    <table class="table mtop-lg-25">
-                                        <thead>
-                                            <tr>
-                                                <td>عنوان طرح پژوهشی</td>
-                                                <td>مجری</td>
-                                                <td>مسئول اجرا/ همکار</td>
-                                                <td>وضعیت طرح پژوهشی</td>
-                                                <td></td>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>نمی دونم</td>
-                                                <td>سپهر خان</td>
-                                                <td>علی آقا</td>
-                                                <td>فعال</td>
-                                                <td>
-                                                    <i class="fas fa-pen"></i>
-                                                    <i class="fas fa-trash-alt"></i>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>
+{#                                    <table class="table mtop-lg-25">#}
+{#                                        <thead>#}
+{#                                            <tr>#}
+{#                                                <td>عنوان طرح پژوهشی</td>#}
+{#                                                <td>مجری</td>#}
+{#                                                <td>مسئول اجرا/ همکار</td>#}
+{#                                                <td>وضعیت طرح پژوهشی</td>#}
+{#                                                <td></td>#}
+{#                                            </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody>#}
+{#                                            <tr>#}
+{#                                                <td>نمی دونم</td>#}
+{#                                                <td>سپهر خان</td>#}
+{#                                                <td>علی آقا</td>#}
+{#                                                <td>فعال</td>#}
+{#                                                <td>#}
+{#                                                    <i class="fas fa-pen"></i>#}
+{#                                                    <i class="fas fa-trash-alt"></i>#}
+{#                                                </td>#}
+{#                                            </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
                                 </div>
                                 <span class="studious-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
@@ -206,32 +206,32 @@
                             <div class="col-lg-12 text-right">
                                 <span class="label header">مقالات <span class="sub-header">(چند مورد از بهترین مقالات)</span></span>
                                 <div class="article text-center w-100">
-{#                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>#}
-                                    <table class="table mtop-lg-25">
-                                        <thead>
-                                            <tr>
-                                                <td>عنوان مقاله</td>
-                                                <td>تاریخ انتشار</td>
-                                                <td>محل دقیق انتشار</td>
-                                                <td>Impact Factor</td>
-                                                <td>تعداد ارجاع</td>
-                                                <td></td>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>کارشناسی</td>
-                                                <td>مهندسی برق</td>
-                                                <td>صنعتی شریف</td>
-                                                <td>تهران</td>
-                                                <td>1400</td>
-                                                <td>
-                                                    <i class="fas fa-pen"></i>
-                                                    <i class="fas fa-trash-alt"></i>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>
+{#                                    <table class="table mtop-lg-25">#}
+{#                                        <thead>#}
+{#                                            <tr>#}
+{#                                                <td>عنوان مقاله</td>#}
+{#                                                <td>تاریخ انتشار</td>#}
+{#                                                <td>محل دقیق انتشار</td>#}
+{#                                                <td>Impact Factor</td>#}
+{#                                                <td>تعداد ارجاع</td>#}
+{#                                                <td></td>#}
+{#                                            </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody>#}
+{#                                            <tr>#}
+{#                                                <td>کارشناسی</td>#}
+{#                                                <td>مهندسی برق</td>#}
+{#                                                <td>صنعتی شریف</td>#}
+{#                                                <td>تهران</td>#}
+{#                                                <td>1400</td>#}
+{#                                                <td>#}
+{#                                                    <i class="fas fa-pen"></i>#}
+{#                                                    <i class="fas fa-trash-alt"></i>#}
+{#                                                </td>#}
+{#                                            </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
                                 </div>
                                 <span class="article-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
@@ -400,48 +400,53 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
     <script type="text/javascript">
         $("#fancy-tree").fancytree({
-          extensions: ["glyph"],
-          // checkbox: true,
-
-          source: [{"title": "Node 1", "key": "1"},
-                 {"title": "تکنیک شماره یک", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
+            extensions: ["glyph"],
+            checkbox: true,
+            selectMode: 3,
+            checkboxAutoHide: true,
+            clickFolderMode: 3,
+            lazyLoad: function(event, data) {
+                  data.result = {url: "https://cdn.rawgit.com/mar10/fancytree/72e03685/demo/ajax-sub2.json"};
+                },
+            activate: function(event, data) {
+                {#alert(event.type + ": " + data.node);#}
+            },
+            select: function(event, data) {
+                {#alert(event.type + ": " + data.node.isSelected() + " " + data.node)#}
+            },
+          source: [
+                 {"title": "histology", "key": "1", "folder": true, "children": [
+                     {"title": "Sterile Tissue Harvest", "key": "101", "folder": true, "childern":[
+                            {"title": "Sterile Tissue Harvest", "key": "10101"},
+                            {"title": "Diagnostic Necropsy and Tissue Harvest", "key": "10102"}
+                            ]},
+                         {"title": "Tissue Cryopreservation", "key": "102"},
+                         {"title": "Tissue Fixation", "key": "103"},
+                         {"title": "Microtome Sectioning", "key": "104"},
+                         {"title": "Cryostat Sectioning", "key": "105"},
+                         {"title": "H&E staining", "key": "106"},
+                         {"title": "Histochemistry", "key": "107"},
+                         {"title": "Histoflouresence", "key": "108"}
                   ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
-                  ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
-                  ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
-                  ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
-                  ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
-                  ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
-                  ]},
-                  {"title": "Node 1", "key": "1"},
-                 {"title": "Folder 2", "key": "2", "folder": true, "children": [
-                    {"title": "Node 2.1", "key": "3"},
-                    {"title": "Node 2.2", "key": "4"}
+                 {"title": "general lab", "key": "2", "folder": true, "children": [
+                         {"title": "An Introduction to the Centrifuge", "key": "201"},
+                         {"title": "Regulating Temperature in the Lab Preserving Sample Using Cold", "key": "202"},
+                         {"title": "Introduction to the Bunsen Burner", "key": "203"},
+                         {"title": "Introduction to Serological Pipettes and Pipettor", "key": "204"},
+                         {"title": "An Introduction to the Micropipettor", "key": "205"},
+                         {"title": "Making Solutions in the Laboratory", "key": "206"},
+                         {"title": "Understanding Concentration and Measuring Volums", "key": "207"},
+                         {"title": "Introduction to the Microplate Reader", "key": "208"},
+                         {"title": "Regulation Temperature in the Lab Applying Heat", "key": "209"},
+                         {"title": "Common Lab Glassware and Users", "key": "210"},
+                         {"title": "Solutions and Concentrations", "key": "211"},
+                         {"title": "Determining the Density of a Solid and Liquid", "key": "212"},
+                         {"title": "Determining the Mass Percent Composition in an Aqueous Solution", "key": "213"},
+                         {"title": "Determining the Empirical Formula", "key": "214"},
+                         {"title": "Determining the Solubility Rules of Ionic Compounds", "key": "215"},
+                         {"title": "Using a pH Meter", "key": "216"},
+                         {"title": "Introduction to Titration", "key": "217"},
+                         {"title": "Ideal Gas Law", "key": "218"}
                   ]}
                   ],
           glyph: {
