--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -4,6 +4,16 @@
 {% block header %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
     <link rel="stylesheet" href="{% static 'industry/css/inputTags.min.css' %}">
+    <style rel="stylesheet">
+        div.container{
+            display: block;
+            width: 100%;
+            margin: 0;
+            padding: 0 15px;
+            background-color: transparent;
+            box-shadow: none;
+        }
+    </style>
 {% endblock %}
 {% block name %}رضا باسره{% endblock %}
 
