--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -22,12 +22,13 @@
     padding-bottom: 40px;
 }
 body{
-  background-color: #f8fdf7;
-  /*#EFF0F2*/
-  font-family: iranyekan, serif;
-  color: #fff;
-  font-size: 14px;
-  overflow-y: hidden;
+    background-color: #f8fdf7;
+    /*#EFF0F2*/
+    font-family: iranyekan, serif;
+    font-weight: 300;
+    color: #fff;
+    font-size: 13px;
+    overflow-y: hidden;
 }
 #loading{
   position: absolute;
@@ -527,10 +528,10 @@ hr{
 }
 .inner-card{
     padding: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     background-color: #fff;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 0 rgba(0,0,0,0.16);
 }
 .ch-card-item:last-child{
   margin-bottom: 25px;
@@ -541,12 +542,11 @@ hr{
   box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.2);
 }
 .header{
-  /*font-family: Shabnam-Bold;*/
-  font-weight: 600;
+  font-weight: 400;
 }
 .sub-header{
-  /*color: #6f7285;*/
-  font-weight: 400;
+  font-weight: 300;
+    font-size: 12px;
 }
 ::-webkit-scrollbar {
   width: 12px;
@@ -977,22 +977,25 @@ input#search_technique+label{
 .display-toggle{
   display: none;
 }
+dl, ol, ul{
+    outline: none;
+}
 ul.ui-fancytree > li{
   list-style-type: none;
   padding: 2px;
-  width: fit-content;
   color: #6f7285;
 }
-ul.ui-fancytree > li.active{
-  color: #6d6d6d;
-}
-ul.ui-fancytree > li:hover{
-  color: #3CCD1C;
-  cursor: pointer;
-}
+/*ul.ui-fancytree > li.active{*/
+/*  color: #6d6d6d;*/
+/*}*/
+/*ul.ui-fancytree > li:hover{*/
+/*  color: #3CCD1C;*/
+/*  cursor: pointer;*/
+/*}*/
 .fa-chevron-left, .fa-chevron-down, .fa-tools, .fa-screwdriver{
-  padding-left: 5px;
-  transition: all ease-in-out 200ms;
+    padding-left: 5px;
+    padding-right: 5px;
+    transition: all ease-in-out 200ms;
 }
 .rotate--90{
     transform: rotate(-90deg) !important;
@@ -1382,6 +1385,9 @@ span.title-back{
     -moz-border-radius: 30px;
     border-radius: 30px;
     background-color: #fff;
+}
+.shadow-back{
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.16), 0 0 5px 0 #ffffff00;
 }
 .project-info-innerDiv, .education-info-innerDiv{
     border: 1px solid #bdbdbd;
