--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -1,6 +1,6 @@
 {% extends "industry/layouts/base_layout.html" %}
 {% load static %}
-{% block title %}<title>پذیرش پروژه</title>{% endblock %}
+{% block title %}پذیرش پروژه{% endblock %}
 {% block header %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
     <link rel="stylesheet" href="{% static 'industry/css/inputTags.min.css' %}">
