--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -1,6 +1,6 @@
 {% extends "industry/layouts/base_layout.html" %}
 {% load static %}
-{% block title %}<title>تنظیمات کاربری</title>{% endblock %}
+{% block title %}تنظیمات کاربری{% endblock %}
 {% block name %}رضا باسره{% endblock %}
 {% block content %}
     <div class="row">
