--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -1,6 +1,6 @@
 {% extends "researcher/layouts/base_layout.html" %}
 
-{% block title %}<title>پروژه ها</title>{% endblock %}
+{% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
 {#    {% include 'researcher/layouts/initial_information.html' %}#}
