--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -1,6 +1,6 @@
 {% extends "researcher/layouts/base_layout.html" %}
 {% load static %}
-{% block title %}<title>تنظیمات کاربری</title>{% endblock %}
+{% block title %}تنظیمات کاربری{% endblock %}
 {% block header %}
     <link rel="stylesheet" href="{% static 'researcher/css/persian-datepicker.min.css' %}">
     <link rel="stylesheet" href="{% static 'researcher/css/datepicker-style.css' %}">
