--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -1,6 +1,6 @@
 {% extends "industry/layouts/base_layout.html" %}
 
-{% block title %}<title>پروژه ها</title>{% endblock %}
+{% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
 {#    {% include 'industry/layouts/initial_information.html' %}#}
